objects/Venue__c.object
<CustomObject>
    <label>Venue</label>
    <nameField>
        <label>Venue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Venues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Map_to_Venue__c</fullName>
        <formula>HYPERLINK(&quot;http://maps.google.com/maps?q=&quot;+  Street_Address_1__c  + &quot;, &quot; +  City__c  + &quot;, &quot; +  State__c  + &quot; &quot; +   Postal_Code_Zip__c  + &quot; &quot; +   Country__c  , &quot;Google Map&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map to Venue</label>
        <type>Text</type>
    </fields>
</CustomObject>